--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react",
+  "name": "react-1",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -44,6 +44,7 @@
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
+    "@rescripts/cli": "^0.0.16",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
     "@types/react-router-dom": "^5.3.3",
